[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/bg/bg3.jpg" type="Texture" id=1]
[ext_resource path="res://Menus/store/SkinBuy.gd" type="Script" id=2]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=4]
[ext_resource path="res://Sprites/UI/icons8-sort-right-100.png" type="Texture" id=5]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.290196, 0.290196, 0.290196, 0.607843 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 28
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.277344, 0.153839, 0.153839, 0.745098 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="DynamicFont" id=11]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 28
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 42
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 260.5, 800 ), Vector2( 260.5, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("back:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1400, 619 ), Vector2( 1090, 619 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("back:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("cash:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 21, -60 ), Vector2( 21, 21 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("cash:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[node name="SkinBuy" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -379.5
margin_top = -312.0
margin_right = 379.5
margin_bottom = 312.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portrait" type="Panel" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_top = 3.34496
margin_right = 136.0
margin_bottom = 213.345
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="img" type="TextureRect" parent="Panel/portrait"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 3.0
margin_right = -2.0
margin_bottom = -4.0
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/portrait"]
margin_left = 60.9048
margin_top = 218.132
margin_right = 209.905
margin_bottom = 255.132
custom_fonts/font = SubResource( 9 )
text = "Skin name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextButton" type="TextureButton" parent="Panel/portrait"]
margin_left = 258.604
margin_top = -7.72075
margin_right = 469.604
margin_bottom = 215.279
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prevButton" type="TextureButton" parent="Panel/portrait"]
margin_left = 19.9086
margin_top = -6.6189
margin_right = 230.909
margin_bottom = 216.381
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc" type="Panel" parent="Panel"]
anchor_left = 0.501
anchor_top = 0.681
anchor_right = 0.501
anchor_bottom = 0.681
margin_left = -335.777
margin_top = -127.615
margin_right = 335.223
margin_bottom = 92.3846
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc" type="Label" parent="Panel/desc"]
margin_left = 15.0
margin_top = 15.0
margin_right = 657.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 11 )
autowrap = true
clip_text = true

[node name="desc2" type="Label" parent="Panel/desc"]
margin_left = 15.0
margin_top = 131.0
margin_right = 432.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 11 )
text = "Team : Terrorist
Price : $500"
autowrap = true
clip_text = true

[node name="purchase" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.92
anchor_right = 0.5
anchor_bottom = 0.92
margin_left = -94.5
margin_top = -30.4245
margin_right = 94.5
margin_bottom = 30.5755
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 12 )
text = "Purchase"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cash" type="Label" parent="."]
margin_left = 21.0
margin_top = 21.0
margin_right = 254.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.101961, 0.713726, 0.254902, 1 )
text = "$5555"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
anchor_left = 0.914
anchor_top = 0.903
anchor_right = 0.914
anchor_bottom = 0.903
margin_left = -79.92
margin_top = -31.16
margin_right = 80.08
margin_bottom = 30.84
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 14 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "initialAnim"
playback_speed = 2.0
anims/initialAnim = SubResource( 15 )
[connection signal="pressed" from="Panel/portrait/nextButton" to="." method="_on_nextButton_pressed"]
[connection signal="pressed" from="Panel/portrait/prevButton" to="." method="_on_prevButton_pressed"]
[connection signal="pressed" from="Panel/purchase" to="." method="_on_purchase_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
